samples/task/invalid/R35.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><choicetable><chhead><choptionhd>H1</choptionhd><chdeschd>H2</chdeschd></chhead></choicetable></step></steps>
  </taskbody>
</task>